--- a/index.html
+++ b/index.html
@@ -1741,7 +1741,7 @@
             <div class="faq-item animate-on-scroll">
                 <div class="faq-question">Can I get a refund if I can't attend?</div>
                 <div class="faq-answer">
-                    <p>Tickets are generally non-refundable to secure your place and maintain balanced ratios. This policy helps us ensure committed attendees and fair gender balance. For specific circumstances, please contact us at hello@lovebite.club. We recommend checking your schedule before booking as spaces are limited and in high demand.</p>
+                    <p>Tickets are generally non-refundable to secure your place and maintain balanced ratios. This policy helps us ensure committed attendees and fair gender balance. For specific circumstances, please contact us at lovebitesydney@outlook.com. We recommend checking your schedule before booking as spaces are limited and in high demand.</p>
                 </div>
             </div>
             <div class="faq-item animate-on-scroll delay-1">
@@ -1774,7 +1774,7 @@
             <div class="footer-links">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms & Conditions</a>
-                <a href="mailto:hello@lovebite.club">hello@lovebite.club</a>
+                <a href="mailto:lovebitesydney@outlook.com">lovebitesydney@outlook.com</a>
             </div>
             <div class="footer-social">
                 <a href="#">Instagram</a>
