--- a/index.html
+++ b/index.html
@@ -1759,7 +1759,7 @@
         <p class="animate-on-scroll delay-1">Stop swiping, start connecting. Join the lovebite.club community and discover a better way to date in Sydney. Your next great conversation is waiting.</p>
         <a href="#events" class="btn btn-primary animate-on-scroll delay-2">Browse Events</a>
         <div class="social-links">
-            <a href="#" class="social-link">Instagram: <span>@lovebite.club</span></a>
+            <a href="https://www.instagram.com/lovebite_club_" class="social-link">Instagram: <span>@lovebite.club</span></a>
             <a href="#" class="social-link">TikTok: <span>@lovebite.club</span></a>
             <a href="#" class="social-link">Facebook: <span>@lovebite.club</span></a>
         </div>
@@ -1773,11 +1773,11 @@
             </div>
             <div class="footer-links">
                 <a href="#">Privacy Policy</a>
-                <a href="#">Terms & Conditions</a>
+                <a href="terms.html">Terms & Conditions</a>
                 <a href="mailto:lovebitesydney@outlook.com">lovebitesydney@outlook.com</a>
             </div>
             <div class="footer-social">
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/lovebite_club_">Instagram</a>
                 <a href="#">TikTok</a>
                 <a href="#">Facebook</a>
             </div>
